[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'util-tools'
description = """
Contains the different sub-packages that make up the utility tools for NTSA.

Module list: ["inlist_handler"]
"""
requires-python = '>=3.11'
keywords = ['utility', 'tools']
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]
dependencies = [ 'pytest' ]
dynamic = ["version", "readme"]
authors = [
    { name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com"}
    ]

[project.urls]
"Homepage" = "https://github.com/JVB11/NTSA"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
packages = [
    'inlist_handler',
    ]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'inlist_handler.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.pytest.ini_options]
pythonpath = [
    "."
]
